# uptitle-server

./: Cargo.toml  Rocket.toml
migrations/2022-04-24-161508_create_user/: down.sql  up.sql
migrations/2022-05-23-175822_versions/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
